# funcnodes_react_flow

./: .gitignore  .pre-commit-config.yaml  NODE_THIRD_PARTY_NOTICE.txt  THIRD_PARTY_NOTICES.md  context7.json  cspell.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: npm_build.yaml  npm_publish_main.yml  npm_test.yml  py_test.yml
app/: package.json  tsconfig.app.json  tsconfig.json  webpack.config.js
app copy/: package.json  tsconfig.json  webpack.config.js  webpack.config.prod.js
app copy/public/: index.html  worker_manager
app copy/src/: App.tsx
app/public/: index.html
app/src/: App.d.ts  App.d.ts.map  App.tsx  index.d.ts  index.d.ts.map  index.tsx  reportWebVitals.d.ts  reportWebVitals.d.ts.map
app_single_worker/: package.json  tsconfig.json  webpack.config.js
app_single_worker/public/: index.html  worker_manager
app_single_worker/src/: App.d.ts  App.d.ts.map  index.d.ts  index.d.ts.map  index.tsx
funcnodes_react_flow/js/: main.js
module/: .gitignore  jest.config.cjs  package.json  package.tgz  package_outs.json  rollup.config.js  rollup.config.mjs  tsconfig.json  tsconfig.module.json  webpack.cjs.config.cjs  webpack.config.base.cjs  webpack.config.esm.cjs  webpack.config.js  webpack.config.umd.cjs
module/public/: index.html  index.js  index.js.map  style.css
node_builder/: package.json  tsconfig.json  webpack.config.js
packedapp/: package.json  rollup.config.mjs  tsconfig.json  webpack.config.js
public/: index.html
src/: App.tsx  index.tsx
tests/: test_import.py
(+460 files in other folders)
