[tool.poetry]
name = "funcnodes_react_flow"
version = "0.1.10"
description = "funcnodes frontend for react flow"
authors = ["Julian Kimmig <julian.kimmig@linkdlab.de>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
funcnodes = ">=0.4.11"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
funcnodes_react_flow = 'funcnodes_react_flow.__main__:main' 
